[project]
name = "mutagenex"
version = "0.1.0"
description = "Residue mutations of a protein using PyMOL"
authors = [
    {name = "Leonardo Bò", email = "boleo88@gmail.com"},
]
dependencies = ["typer>=0.15.1", "rich>=13.9.4"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
